# TienLenAI_MPI

./: CMakeLists.txt  Readme.md  abc  main.cpp  project
algorithm/: GameReward.cpp  GameReward.h  MctsPlayerConfiguration.h  MonteCarloTreeSearch.h  MonteCarloTreeSearchPlayer.cpp  MonteCarloTreeSearchPlayer.h  TienLenGame.cpp  TienLenGame.h  TienLenNode.cpp  TienLenNode.h  TienLenPlayer.cpp  TienLenPlayer.h
base/: BaseCard.cpp  BaseCard.h  BaseObject.cpp  BaseObject.h  BotListener.cpp  BotListener.h  Card.cpp  Card.h  Game.cpp  Game.h  GameConfig.h  GameConfiguration.h  Node.cpp  Node.h  Player.cpp  Player.h  Reward.cpp  Reward.h
helper/: Filter.h  Finder.h  HashMap.cpp  HashMap.h  Util.h
objects/: Card.cpp  Card.h  Dub.cpp  Dub.h  DubSequence.cpp  DubSequence.h  Pass.cpp  Pass.h  QuadSequence.cpp  QuadSequence.h  Quads.cpp  Quads.h  Sequence.cpp  Sequence.h  TripSequence.cpp  TripSequence.h  Trips.cpp  Trips.h
test/: Test.h
